# simple-3d-scene-viewer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  test.yml
src/: app.rs  core.rs  main.rs
src/app/: app_config.toml  config.rs  left_panel.rs  main_window.rs  main_window_config.toml  scene_display.rs  scene_viewer_app.rs
src/core/: app_config.toml  application.rs  asset_manager.rs  gl_window.rs  render_target.rs  renderer.rs  scene.rs  time.rs  window.rs
