[package]
name = "simple-3d-scene-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.22"
env_logger = "0.11.8"
anyhow = "1.0.93"
ctor = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glow = "0.13"

winit = { version = "0.30", features = ["rwh_06"] }
glutin = "0.32"
glutin-winit = "0.5"

